# PushIt

./: .gitignore  HANDBUCH.md  PushIt.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build.yml
android-client/: settings.gradle
android-client/app/: build.gradle
backend/: .env.example  package.json
backend/drizzle/: 0000_sharp_northstar.sql  0001_absurd_xorn.sql  0002_notification_category.sql  0003_desktop_tauri.sql  0004_pairing_codes.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/src/: index.ts
backend/src/db/: index.ts  migrate.ts  schema.ts
backend/src/gateways/: electron.gateway.ts  fcm.gateway.ts  index.ts  types.ts  webpush.gateway.ts
backend/src/lib/: crypto.ts  queue.ts  ws-manager.ts
backend/src/middleware/: auth.ts
backend/src/routes/: api-keys.ts  auth.ts  devices.ts  notifications.ts  pair.ts  templates.ts  ws.ts
backend/src/workers/: notification-dispatcher.ts  notification-expiry.ts
frontend/: package.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.ts  useDarkMode.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: ApiKeysPage.tsx  DeviceRegistrationPage.tsx  DevicesPage.tsx  LoginPage.tsx  TemplatesPage.tsx  (+4 more)
tauri-client/: package-lock.json  package.json
tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
tauri-client/src-tauri/capabilities/: default.json
tauri-client/src-tauri/icons/: icon.icns
tauri-client/src-tauri/src/: main.rs
tauri-client/ui/: overlay.html  setup.html
(+15 files in other folders)
